dev/tests/cases/neg/31_when_missing_variants.tv
aett Status { Pending, Active, Closed }
df main() -> void {
    set s: Status = Status::Pending;
    when s {
        Status::Pending => echo!("w");
    }
}
